--- a/settings.gradle
+++ b/settings.gradle
@@ -9,6 +9,5 @@ include 'kodilla-spring-web'
 include 'kodilla-patterns'
 include 'kodilla-jdbc'
 include 'kodilla-hibernate'
-include 'kodilla-sudok'
-
+include 'kodilla-sudoku'
 
